Fixed entities not showing. Cleaned up module-info.java for different modules